--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
     pizzas y empanadas.
   </p>
 
-  <input type="text" id="buscador" placeholder="Buscar">
-  <button id="atencion-al-cliente">Atención al cliente</button>
-  <ul class="servicios">
-    <li class="especial">
+  <div class="carrito">
+    <span>Carrito total de unidades:
+      <span id="carritoTotalUnidades">0</span>
+    </span>
+    <span>Carrito total precio: $<span id="carritoTotalPrecio">0</span>
+    </span>
+    <ul id="carritoLista">
+    </ul>
+  </div>
+  <ul class="servicios" id="lista-servicios">
+    <li data-idservicio="25">
       <span>Chivitos</span>
       <img src="images/chivito.webp" alt="Chivito" />
       <span>$350</span>
