servicio por producto

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <ul id="carritoLista">
     </ul>
   </div>
-  <ul class="servicios" id="lista-servicios">
-    <li data-idservicio="25">
+  <ul class="productos" id="lista-productos">
+    <li data-idproducto="25">
       <span>Chivitos</span>
       <img src="images/chivito.webp" alt="Chivito" />
       <span>$350</span>
