--- a/index.html
+++ b/index.html
@@ -4,54 +4,77 @@
 
 <head>
   <title>ChivitoYa</title>
-  <script src="scripts/index.js"></script>
+  <script src="scripts/index.js"></script>  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/todas_las_paginas.css">
   <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
-  <h1 id="titulo-principal">ChivitoYa</h1>
-  <p class="descripcion-de-la-empresa">
-    ChivitoYa es una empresa de delivery de comida rápida.
-    Nos especializamos en la entrega de chivitos, hamburguesas,
-    pizzas y empanadas.
-  </p>
+  <header>
+    <nav>
+      <ul>
+        <li class="align-left">
+          <a href="index.html">Chivitosya - Admin</a>
+        </li>
+        <li class="align-right">
+          <ul>
+            <li>Home</li>
+            <li><a href="pages/admin.html">Admin</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="carrito">
-    <span>Carrito total de unidades:
-      <span id="carritoTotalUnidades">0</span>
-    </span>
-    <span>Carrito total precio: $<span id="carritoTotalPrecio">0</span>
-    </span>
-    <ul id="carritoLista">
+  <main>
+    <h1 id="titulo-principal">ChivitoYa</h1>
+    <p class="descripcion-de-la-empresa">
+      ChivitoYa es una empresa de delivery de comida rápida.
+      Nos especializamos en la entrega de chivitos, hamburguesas,
+      pizzas y empanadas.
+    </p>
+
+    <div class="carrito">
+      <span>Carrito total de unidades:
+        <span id="carritoTotalUnidades">0</span>
+      </span>
+      <span>Carrito total precio: $<span id="carritoTotalPrecio">0</span>
+      </span>
+      <ul id="carritoLista">
+      </ul>
+    </div>
+    <ul class="productos" id="lista-productos">
+      <li data-idproducto="25">
+        <span>Chivitos</span>
+        <img src="images/chivito.webp" alt="Chivito" />
+        <span>$350</span>
+        <button>Comprar</button>
+      </li>
+      <li>
+        <span>Hamburguesas</span>
+        <img src="images/hamburguesa.avif" alt="Hamburguesa" />
+        <span>$400</span>
+        <button>Comprar</button>
+      </li>
+      <li>
+        <span>Pizzas</span>
+        <img src="images/pizza.avif" alt="Pizza" />
+        <span>$450</span>
+        <button>Comprar</button>
+      </li>
+      <li>
+        <span>Empanadas</span>
+        <img src="images/empanadas.avif" alt="Empanadas" />
+        <span>$65</span>
+        <button>Comprar</button>
+      </li>
     </ul>
-  </div>
-  <ul class="productos" id="lista-productos">
-    <li data-idproducto="25">
-      <span>Chivitos</span>
-      <img src="images/chivito.webp" alt="Chivito" />
-      <span>$350</span>
-      <button>Comprar</button>
-    </li>
-    <li>
-      <span>Hamburguesas</span>
-      <img src="images/hamburguesa.avif" alt="Hamburguesa" />
-      <span>$400</span>
-      <button>Comprar</button>
-    </li>
-    <li>
-      <span>Pizzas</span>
-      <img src="images/pizza.avif" alt="Pizza" />
-      <span>$450</span>
-      <button>Comprar</button>
-    </li>
-    <li>
-      <span>Empanadas</span>
-      <img src="images/empanadas.avif" alt="Empanadas" />
-      <span>$65</span>
-      <button>Comprar</button>
-    </li>
-  </ul>
+  </main>
 
+  <footer>
+    <p>Chivitosya - 2021</p>
+  </footer>
 </body>
 
 </html>
