--- a/pages/admin.html
+++ b/pages/admin.html
@@ -39,8 +39,8 @@
             <input type="number" id="precio" name="precio" />
           </div>
           <div>
-            <label for="imagen">Imagen</label>
-            <input type="file" id="imagen" name="imagen" />
+            <label for="imagen">URL Imagen</label>
+            <input type="text" id="imagen" name="imagen" />
           </div>
          <button>Agregar</button>
         </fieldset>
@@ -49,7 +49,7 @@
 
     <section>
       <h2>Lista de productos</h2>
-      <table class="pure-table-striped">
+      <table class="pure-table-striped pure-table">
         <thead>
           <tr>
             <th>Imagen</th>
