nuevos estilos para admin con bootstrap

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles/todas_las_paginas.css">
   <link rel="stylesheet" href="../styles/admin.css">
   <script src="../scripts/admin.js"></script>
@@ -11,7 +12,7 @@
 </head>
 <body>
   <header>
-    <nav>
+    <nav class="container-fluid">
       <ul>
         <li class="align-left">
           <a href="index.html">Chivitosya - Admin</a>
@@ -27,37 +28,37 @@
   </header>
 
   <main>
-    <section>
-      <div class="pure-form">
-        <button id="mostrarOcultarFormulario" class="pure-button pure-button-primary">Agregar producto</button>
+    <section class="container-fluid">
+      <div class="margin-tb-lg">
+        <button id="mostrarOcultarFormulario" class="btn btn-primary">Agregar producto</button>
         <fieldset class="oculto">
           <legend id="leyendaFormulario">Agregar producto</legend>
-          <input type="hidden" id="idProductoParaEditar" name="idProducto" value="0" />
+          <input class="form-control" type="hidden" id="idProductoParaEditar" name="idProducto" value="0" />
           <div>
             <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" />
+            <input class="form-control" type="text" id="nombre" name="nombre" />
           </div>
           <div>
             <label for="precio">Precio</label>
-            <input type="number" id="precio" name="precio" />
+            <input class="form-control" type="number" id="precio" name="precio" />
           </div>
           <div>
             <label for="urlImagen">URL Imagen</label>
-            <input type="text" id="urlImagen" name="urlImagen" />
+            <input class="form-control" type="text" id="urlImagen" name="urlImagen" />
           </div>
           <div>
             <label for="tipo">Tipo de comida</label>
-            <select id="tipo" name="tipo">
+            <select id="tipo" class="form-select" name="tipo">
               <option value="Casera">Casera</option>
               <option value="Vegetariana">Vegetariana</option>
               <option value="Pizzería">Pizzería</option>
             </select>
           </div>
-          <div class="actions">
-            <button id="botonCancelar" class="pure-button pure-button-secondary">
+          <div class="btn-group margin-tb-lg" role="group">
+            <button id="botonCancelar" class="btn btn-secondary">
               Cancelar
             </button>
-            <button id="botonAgregar" class="pure-button pure-button-primary">
+            <button id="botonAgregar" class="btn btn-primary">
               Agregar
             </button>
           </div>
@@ -65,16 +66,16 @@
       </div>
     </section>
 
-    <section>
+    <section class="container-fluid">
       <h2>Lista de productos</h2>
-      <table class="pure-table-striped pure-table">
+      <table class="table table-striped align-middle table-hover table-bordered">
         <thead>
           <tr>
-            <th>Imagen</th>
-            <th>Nombre</th>
-            <th>Precio</th>
-            <th>Tipo</th>
-            <th>Acciones</th>
+            <th scope="col">Imagen</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Tipo</th>
+            <th scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody id="tablaProductos">
@@ -93,8 +94,18 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="container-fluid">
     <p>Chivitosya - 2021</p>
   </footer>
+  <style>
+    .margin-tb-lg {
+      margin: 2rem 0;
+    }
+    
+    table tr td:last-child,
+    table tr th:last-child {
+      width: 100px;
+    }
+  </style>
 </body>
 </html>
