--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
 
 <head>
   <title>ChivitoYa</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="scripts/index.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
-    integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/todas_las_paginas.css">
   <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
-  <header>
+  <header class="container-fluid align-middle">
     <nav>
-      <ul>
-        <li class="align-left">
-          <a href="index.html">Chivitosya - Admin</a>
+      <ul class="d-flex flex-row">
+        <li class="pt-3 pb-3 pl-1 fs-3 flex-start">
+          <a class="text-decoration-none" href="index.html">Chivitosya - Admin</a>
         </li>
-        <li class="align-right">
-          <ul>
-            <li>Home</li>
-            <li><a href="pages/admin.html">Admin</a></li>
+        <li class="flex-grow-1">
+          <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
+            <li class="p-3 pt-4 align-middle">Home</li>
+            <li class="p-3 pt-4 align-middle"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="pages/admin.html">Admin</a></li>
           </ul>
         </li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <main class="container-lg">
     <h1 id="titulo-principal">ChivitoYa</h1>
     <p class="descripcion-de-la-empresa">
       ChivitoYa es una empresa de delivery de comida rápida.
@@ -36,26 +36,35 @@
       pizzas y empanadas.
     </p>
 
-    <div class="carrito">
-      <span>Carrito total de unidades:
-        <span id="carritoTotalUnidades">0</span>
-      </span>
-      <span>Carrito total precio: $<span id="carritoTotalPrecio">0</span>
-      </span>
-      <ul id="carritoLista">
-      </ul>
+    <div class="d-flex flex-row">
+      <div class="w-25">
+        <div class="carrito">
+          <p>
+            Carrito total de unidades:
+            <span id="carritoTotalUnidades">0</span>
+          </p>
+          <p>
+            Carrito total precio: 
+            $<span id="carritoTotalPrecio">0</span>
+          </p>
+          <ul id="carritoLista">
+          </ul>
+        </div>
+      </div>
+      <div class="flex-grow-1">
+        <ul class="productos" id="lista-productos">
+          <li data-idproducto="25">
+            <span>Chivitos</span>
+            <img src="images/chivito.webp" alt="Chivito" />
+            <span>$350</span>
+            <button>Comprar</button>
+          </li>
+        </ul>
+      </div>
     </div>
-    <ul class="productos" id="lista-productos">
-      <li data-idproducto="25">
-        <span>Chivitos</span>
-        <img src="images/chivito.webp" alt="Chivito" />
-        <span>$350</span>
-        <button>Comprar</button>
-      </li>
-    </ul>
   </main>
 
-  <footer>
+  <footer class="container-fluid">
     <p>Chivitosya - 2024</p>
   </footer>
 </body>
