--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 
 <head>
   <title>ChivitoYa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <script src="scripts/index.js"></script>
   <link rel="stylesheet" href="styles/todas_las_paginas.css">
   <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body>
-  <header class="container-fluid align-middle">
+  <header class="container-fluid">
     <nav>
       <ul class="d-flex flex-row">
         <li class="pt-3 pb-3 pl-1 fs-3 flex-start">
@@ -21,7 +24,10 @@
         <li class="flex-grow-1">
           <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
             <li class="p-3 pt-4 align-middle">Home</li>
-            <li class="p-3 pt-4 align-middle"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="pages/admin.html">Admin</a></li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="pages/admin.html">Admin</a>
+            </li>
           </ul>
         </li>
       </ul>
@@ -44,7 +50,7 @@
             <span id="carritoTotalUnidades">0</span>
           </p>
           <p>
-            Carrito total precio: 
+            Carrito total precio:
             $<span id="carritoTotalPrecio">0</span>
           </p>
           <ul id="carritoLista">
@@ -57,7 +63,7 @@
             <span>Chivitos</span>
             <img src="images/chivito.webp" alt="Chivito" />
             <span>$350</span>
-            <button>Comprar</button>
+            <button class="btn btn-primary btn-sm">Comprar</button>
           </li>
         </ul>
       </div>
