--- a/pages/admin.html
+++ b/pages/admin.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles/todas_las_paginas.css">
   <link rel="stylesheet" href="../styles/admin.css">
   <script src="../scripts/admin.js"></script>
   <title>Chivitosya - Admin</title>
 </head>
+
 <body>
   <header class="container-fluid align-middle">
     <nav>
@@ -19,8 +24,10 @@
         </li>
         <li class="flex-grow-1">
           <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
-            <li class="p-3 pt-4 align-middle"> 
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../index.html">Home</a></li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../index.html">Home</a>
+            </li>
             <li class="p-3 pt-4 align-middle">Admin</a></li>
           </ul>
         </li>
@@ -63,7 +70,7 @@
               Agregar
             </button>
           </div>
-       </fieldset>
+        </fieldset>
       </div>
     </section>
 
@@ -86,8 +93,8 @@
             <td>$350</td>
             <td>Casera</td>
             <td>
-              <button class="pure-button button-secondary">Editar</button>
-              <button class="pure-button button-warning">Eliminar</button>
+              <button class="button-secondary">Editar</button>
+              <button class="button-danger">Eliminar</button>
             </td>
           </tr>
         </tbody>
@@ -99,4 +106,5 @@
     <p>Chivitosya - 2024</p>
   </footer>
 </body>
+
 </html>
