cambiar index para principal

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -20,13 +20,13 @@
     <nav>
       <ul class="d-flex flex-row">
         <li class="pt-3 pb-3 pl-1 fs-3 flex-start">
-          <a class="text-decoration-none" href="index.html">Chivitosya - Admin</a>
+          <a class="text-decoration-none" href="../pages/principal.html">Chivitosya - Admin</a>
         </li>
         <li class="flex-grow-1">
           <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
             <li class="p-3 pt-4 align-middle">
               <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="../index.html">Home</a>
+                href="../pages/principal.html">Principal</a>
             </li>
             <li class="p-3 pt-4 align-middle">Admin</a></li>
           </ul>
