--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-
-<html lang="es">
-
+<html lang="en">
 <head>
-  <title>ChivitoYa</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bienvenido a Chivitos ya!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="styles/todas_las_paginas.css">
   <link rel="stylesheet" href="styles/index.css">
 </head>
-
 <body>
   <header class="container-fluid">
     <nav>
@@ -23,56 +22,30 @@
         </li>
         <li class="flex-grow-1">
           <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
-            <li class="p-3 pt-4 align-middle">Home</li>
             <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="pages/admin.html">Admin</a>
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="pages/principal.html">Principal</a>
+            </li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="pages/admin.html">Admin</a>
             </li>
           </ul>
         </li>
       </ul>
     </nav>
   </header>
-
   <main class="container-lg">
-    <h1 id="titulo-principal">ChivitoYa</h1>
-    <p class="descripcion-de-la-empresa">
-      ChivitoYa es una empresa de delivery de comida rápida.
+    <h1>Chivitos Ya!</h1>
+    <p>
+      Chivitosya es una empresa de delivery de comida rápida.
       Nos especializamos en la entrega de chivitos, hamburguesas,
       pizzas y empanadas.
     </p>
 
-    <div class="d-flex flex-row">
-      <div class="w-25">
-        <div class="carrito">
-          <p>
-            Carrito total de unidades:
-            <span id="carritoTotalUnidades">0</span>
-          </p>
-          <p>
-            Carrito total precio:
-            $<span id="carritoTotalPrecio">0</span>
-          </p>
-          <ul id="carritoLista">
-          </ul>
-        </div>
-      </div>
-      <div class="flex-grow-1">
-        <ul class="productos" id="lista-productos">
-          <li data-idproducto="25">
-            <span>Chivitos</span>
-            <img src="images/chivito.webp" alt="Chivito" />
-            <span>$350</span>
-            <button class="btn btn-primary btn-sm">Comprar</button>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <a href="pages/principal.html">Ir a comprar</a>
   </main>
-
+  
   <footer class="container-fluid">
     <p>Chivitosya - 2024</p>
   </footer>
 </body>
-
 </html>
