--- a/index.html
+++ b/index.html
@@ -9,43 +9,41 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="scripts/index.js"></script>
   <link rel="stylesheet" href="styles/todas_las_paginas.css">
-  <link rel="stylesheet" href="styles/index.css">
+  <style>
+    main img {
+      display: block;
+      width: 90%;
+      min-width: 200px;
+      max-width: 400px;
+    }
+
+    main .card {
+      min-width: 300px;
+    }
+  </style>
 </head>
 <body>
-  <header class="container-fluid">
-    <nav>
-      <ul class="d-flex flex-row">
-        <li class="pt-3 pb-3 pl-1 fs-3 flex-start">
-          <a class="text-decoration-none" href="index.html">Chivitosya - Admin</a>
-        </li>
-        <li class="flex-grow-1">
-          <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
-            <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="pages/principal.html">Principal</a>
-            </li>
-            <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="pages/admin.html">Admin</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="container-lg">
-    <h1>Chivitos Ya!</h1>
-    <p>
-      Chivitosya es una empresa de delivery de comida rápida.
-      Nos especializamos en la entrega de chivitos, hamburguesas,
-      pizzas y empanadas.
-    </p>
 
-    <a href="pages/principal.html">Ir a comprar</a>
+  <main class="container-lg index">
+    <div class="w-50 m-auto mt-5">
+      <div class="card">
+        <div class="card-header">
+          Bienvenido a Chivitos Ya!
+        </div>
+        <img src="images/logo.png" alt="Chivitosya" class="card-img-top m-auto p-5 pb-1" />
+
+        <div class="card-body">
+          <p class="card-text mb-3">
+            Hacemos delivery de comida rápida.
+            Nos especializamos en la entrega de chivitos, hamburguesas,
+            pizzas y empanadas.
+          </p>
+          <a href="pages/principal.html" class="btn btn-primary">Ir a comprar</a>
+        </div>
+      </div>
+    </div>
   </main>
   
-  <footer class="container-fluid">
-    <p>Chivitosya - 2024</p>
-  </footer>
 </body>
 </html>
