--- a/index.html
+++ b/index.html
@@ -28,18 +28,20 @@
   <main class="container-lg index">
     <div class="w-50 m-auto mt-5">
       <div class="card">
-        <div class="card-header">
+        <div class="card-header text-center">
           Bienvenido a Chivitos Ya!
         </div>
-        <img src="images/logo.png" alt="Chivitosya" class="card-img-top m-auto p-5 pb-1" />
 
-        <div class="card-body">
+        <img src="images/logo.png" alt="Chivitosya" class="card-img-top m-auto p-4" />
+
+        <div class="card-body border-1 border-top">
           <p class="card-text mb-3">
             Hacemos delivery de comida rápida.
             Nos especializamos en la entrega de chivitos, hamburguesas,
             pizzas y empanadas.
           </p>
-          <a href="pages/principal.html" class="btn btn-primary">Ir a comprar</a>
+
+          <a href="pages/principal.html" class="btn btn-primary w-100">Ir a comprar</a>
         </div>
       </div>
     </div>
