header y footer estilos

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -16,19 +16,26 @@
 </head>
 
 <body>
-  <header class="container-fluid align-middle">
-    <nav>
-      <ul class="d-flex flex-row">
-        <li class="pt-3 pb-3 pl-1 fs-3 flex-start">
-          <a class="text-decoration-none" href="../pages/principal.html">Chivitosya - Admin</a>
+  <header class="container-fluid mb-4">
+    <nav class="border-bottom border-2">
+      <ul class="d-flex flex-row list-unstyled">
+        <li class="pt-3 pl-1 fs-3 flex-start">
+          <a class="text-decoration-none" href="../index.html">
+            <img src="../images/logo.png" alt="chivitos ya logo">
+          </a>
         </li>
-        <li class="flex-grow-1">
-          <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
+        <li class="flex-grow-1 pt-2">
+          <ul class="d-flex flex-row-reverse fs-6 w-100 h-100 list-unstyled">
             <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="../pages/principal.html">Principal</a>
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/principal.html">
+                Principal
+              </a>
             </li>
-            <li class="p-3 pt-4 align-middle">Admin</a></li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/admin.html">
+                Admin
+              </a>
+            </li>
           </ul>
         </li>
       </ul>
@@ -62,7 +69,7 @@
               <option value="Pizzería">Pizzería</option>
             </select>
           </div>
-          <div class="btn-group margin-tb-lg" role="group">
+          <div class="btn-group mt-3" role="group">
             <button id="botonCancelar" class="btn btn-secondary">
               Cancelar
             </button>
@@ -74,7 +81,7 @@
       </div>
     </section>
 
-    <section class="container-lg">
+    <section class="container-lg mt-5">
       <h2>Lista de productos</h2>
       <table class="table table-striped align-middle table-hover table-bordered">
         <thead>
@@ -102,9 +109,7 @@
     </section>
   </main>
 
-  <footer class="container-fluid">
-    <p>Chivitosya - 2024</p>
+  <footer class="container-fluid border-top border-2 p-5">
+    <p>Chivitosya &copy; 2024</p>
   </footer>
-</body>
-
 </html>
