--- a/pages/principal.html
+++ b/pages/principal.html
@@ -16,18 +16,25 @@
 </head>
 
 <body>
-  <header class="container-fluid">
-    <nav>
-      <ul class="d-flex flex-row">
-        <li class="pt-3 pb-3 pl-1 fs-3 flex-start">
-          <a class="text-decoration-none" href="../index.html">Chivitosya - Admin</a>
+  <header class="container-fluid mb-5">
+    <nav class="border-bottom border-2">
+      <ul class="d-flex flex-row list-unstyled">
+        <li class="pt-3 pl-1 fs-3 flex-start">
+          <a class="text-decoration-none" href="../index.html">
+            <img src="../images/logo.png" alt="chivitos ya logo">
+          </a>
         </li>
-        <li class="flex-grow-1">
-          <ul class="d-flex flex-row-reverse fs-6 w-100 h-100">
-            <li class="p-3 pt-4 align-middle">Principal</li>
+        <li class="flex-grow-1 pt-2">
+          <ul class="d-flex flex-row-reverse fs-6 w-100 h-100 list-unstyled">
             <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
-                href="../pages/admin.html">Admin</a>
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/principal.html">
+                Principal
+              </a>
+            </li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/admin.html">
+                Admin
+              </a>
             </li>
           </ul>
         </li>
@@ -36,7 +43,7 @@
   </header>
 
   <main class="container-lg">
-    <h1 id="titulo-principal">ChivitoYa</h1>
+    <h1 id="titulo-principal">ChivitosYa</h1>
     <p class="descripcion-de-la-empresa">
       ChivitoYa es una empresa de delivery de comida rápida.
       Nos especializamos en la entrega de chivitos, hamburguesas,
@@ -71,8 +78,8 @@
     </div>
   </main>
 
-  <footer class="container-fluid">
-    <p>Chivitosya - 2024</p>
+  <footer class="container-fluid border-top border-2 p-5">
+    <p>Chivitosya &copy; 2024</p>
   </footer>
 </body>
 
