agregar demo array metodos, y busqueda en principal

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -27,13 +27,21 @@
         <li class="flex-grow-1 pt-2">
           <ul class="d-flex flex-row-reverse fs-6 w-100 h-100 list-unstyled">
             <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/principal.html">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../pages/principal.html">
                 Principal
               </a>
             </li>
             <li class="p-3 pt-4 align-middle">
-              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="../pages/admin.html">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../pages/admin.html">
                 Admin
+              </a>
+            </li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../pages/demos_array.html">
+                Demos Array
               </a>
             </li>
           </ul>
@@ -112,4 +120,5 @@
   <footer class="container-fluid border-top border-2 p-5">
     <p>Chivitosya &copy; 2024</p>
   </footer>
+
 </html>
