--- a/pages/demos_array.html
+++ b/pages/demos_array.html
@@ -11,8 +11,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles/todas_las_paginas.css">
-  <link rel="stylesheet" href="../styles/principal.css">
-  <script src="../scripts/principal.js"></script>
+  <link rel="stylesheet" href="../styles/demos_array.css">
+  <script src="../scripts/demos_array.js"></script>
 </head>
 
 <body>
@@ -50,47 +50,8 @@
     </nav>
   </header>
 
-  <main class="container-lg">
-    <h1 id="titulo-principal">ChivitosYa</h1>
-    <p class="descripcion-de-la-empresa">
-      ChivitoYa es una empresa de delivery de comida rápida.
-      Nos especializamos en la entrega de chivitos, hamburguesas,
-      pizzas y empanadas.
-    </p>
+  <main>
 
-    <div class="d-flex flex-row mb-3">
-      <div class="form-control">
-        <label>Buscar:</label>
-        <input type="text" id="buscar" class="w-100" />
-      </div>
-    </div>
-
-    <div class="d-flex flex-row">
-      <div class="w-25">
-        <div class="carrito">
-          <p>
-            Carrito total de unidades:
-            <span id="carritoTotalUnidades">0</span>
-          </p>
-          <p>
-            Carrito total precio:
-            $<span id="carritoTotalPrecio">0</span>
-          </p>
-          <ul id="carritoLista">
-          </ul>
-        </div>
-      </div>
-      <div class="flex-grow-1">
-        <ul class="productos" id="lista-productos">
-          <li data-idproducto="25">
-            <span>Chivitos</span>
-            <img src="../images/chivito.webp" alt="Chivito" />
-            <span>$350</span>
-            <button class="btn btn-primary btn-sm">Comprar</button>
-          </li>
-        </ul>
-      </div>
-    </div>
   </main>
 
   <footer class="container-fluid border-top border-2 p-5">
