--- a/pages/admin.html
+++ b/pages/admin.html
@@ -56,7 +56,7 @@
         <button id="mostrarOcultarFormulario" class="btn btn-primary">Agregar producto</button>
         <fieldset class="oculto">
           <legend id="leyendaFormulario">Agregar producto</legend>
-          <input class="form-control" type="hidden" id="idProductoParaEditar" name="idProducto" value="0" />
+          <input class="form-control" type="hidden" id="idProductoParaEditar" name="idProducto" value="-1" />
           <div>
             <label for="nombre">Nombre</label>
             <input class="form-control" type="text" id="nombre" name="nombre" />
@@ -86,6 +86,23 @@
             </button>
           </div>
         </fieldset>
+      </div>
+    </section>
+
+    <section>
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Total Productos</h5>
+            <h1 class="card-title" id="cardTotalProductos"></h1>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Total Ventas</h5>
+            <h1 class="card-title" id="cardTotalVentas">$27,423</h1>
+          </div>
+        </div>
       </div>
     </section>
 
