--- a/pages/admin.html
+++ b/pages/admin.html
@@ -44,6 +44,24 @@
                 Demos Array
               </a>
             </li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../pages/storage1.html">
+                Storage1
+              </a>
+            </li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../pages/storage2.html">
+                Storag2
+              </a>
+            </li>
+            <li class="p-3 pt-4 align-middle">
+              <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+                href="../pages/storage3.html">
+                Storage3
+              </a>
+            </li>
           </ul>
         </li>
       </ul>
