--- a/pages/storage1.html
+++ b/pages/storage1.html
@@ -12,7 +12,8 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles/todas_las_paginas.css">
   <link rel="stylesheet" href="../styles/demos_array.css">
-  <script src="../scripts/demos_array.js"></script>
+  <script src="../scripts/appStorage.js"></script>
+  <script src="../scripts/storage1.js"></script>
 </head>
 
 <body>
@@ -69,7 +70,17 @@
   </header>
 
   <main>
+    <h1 id="h1Storage1">asdfasfdfsdadfsafsdadfa</h1>
+    <h1 id="h1Contador">0</h1>
+    <div>
+      <label for="inputStorage1">titulo:</label>
+      <input type="text" id="inputStorage1">
 
+      <label for="inputContador">contador:</label>
+      <input type="number" id="inputContador">
+
+      <button id="botonStorage1">Click me</button>
+    </div>
   </main>
 
   <footer class="container-fluid border-top border-2 p-5">
