--- a/pages/storage2.html
+++ b/pages/storage2.html
@@ -12,7 +12,8 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../styles/todas_las_paginas.css">
   <link rel="stylesheet" href="../styles/demos_array.css">
-  <script src="../scripts/demos_array.js"></script>
+  <script src="../scripts/appStorage.js"></script>
+  <script src="../scripts/storage2.js"></script>
 </head>
 
 <body>
@@ -69,7 +70,8 @@
   </header>
 
   <main>
-
+    <h1 id="h1Storage2">Este texto es h1 en storage 2</h1>
+    <h1 id="h1Contador">0</h1>
   </main>
 
   <footer class="container-fluid border-top border-2 p-5">
